# bachata-video-proffessor

./: .gitignore  ACE_Step_1_5_Colab_UI.ipynb  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md
notebooks/: Bachata_Analysis_Demo.ipynb
src/bachata_analyzer/: __init__.py  analyzer.py  cli.py  config.py  models.py  output_generator.py  pose_detector.py  segmentation.py  video_processor.py
tests/: __init__.py  test_config.py  test_models.py  test_pose_detector.py  test_segmentation.py
